--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </head>
   <body>
     <div id="root" style="width: 100vw; height: 100vh;"></div>
-    <script type="module" src="./src/index.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
