--- a/index.html
+++ b/index.html
@@ -3,24 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Sumpoints | jbaileystudio</title>
-    <meta name="title" content="Sumpoints - See The Experience">
-    <meta name="description" content="Chart customer experiences, identify pain points, and discover opportunities with Sumpoints. A visual tool for mapping emotional journeys and understanding what influences user decisions.">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Sumpoints - See The Experience">
-    <meta property="og:description" content="Chart customer experiences, identify pain points, and discover opportunities with Sumpoints. A visual tool for mapping emotional journeys and understanding what influences user decisions.">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Sumpoints - See The Experience">
-    <meta property="twitter:description" content="Chart customer experiences, identify pain points, and discover opportunities with Sumpoints. A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+    <title>Sumpoints</title>
   </head>
   <body>
-    <div id="root" style="width: 100vw; height: 100vh;"></div>
+    <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
