--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Sumpoints</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Sumpoints | Tap the Source of Great Satisfaction</title>
+    <meta name="title" content="Sumpoints | Tap the Source of Great Satisfaction">
+    <meta name="description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sumpoints | Tap the Source of Great Satisfaction">
+    <meta property="og:description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Sumpoints | Tap the Source of Great Satisfaction">
+    <meta property="twitter:description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
   </head>
   <body>
     <div id="root"></div>
