--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Sumpoints | Tap the Source of Great Satisfaction">
     <meta property="twitter:description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+
+    <!-- Standard SVG favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon-32.svg" sizes="32x32">
+    <link rel="icon" type="image/svg+xml" href="/favicon-48.svg" sizes="48x48">
+    <link rel="icon" type="image/svg+xml" href="/favicon-64.svg" sizes="64x64">
+    
+    <!-- PNG fallbacks - Safari will use these -->
+    <link rel="icon" type="image/png" href="/favicon-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/favicon-64.png" sizes="64x64">
+
+    <!-- Apple specific tags -->
+    <link rel="apple-touch-icon" href="/favicon-180.png" sizes="180x180">
+    <link rel="mask-icon" href="/favicon.svg" color="#000000">
   </head>
   <body>
     <div id="root"></div>
