--- a/index.html
+++ b/index.html
@@ -19,19 +19,27 @@
     <meta property="twitter:title" content="Sumpoints | Tap the Source of Great Satisfaction">
     <meta property="twitter:description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
 
-    <!-- Standard SVG favicons -->
+    <!-- Base favicon - put this first -->
+    <link rel="icon" href="/favicon-32.png">
+
+    <!-- Basic favicon for Safari desktop and older browsers -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+    <!-- SVG versions for modern browsers -->
     <link rel="icon" type="image/svg+xml" href="/favicon-32.svg" sizes="32x32">
     <link rel="icon" type="image/svg+xml" href="/favicon-48.svg" sizes="48x48">
     <link rel="icon" type="image/svg+xml" href="/favicon-64.svg" sizes="64x64">
-    
-    <!-- PNG fallbacks - Safari will use these -->
-    <link rel="icon" type="image/png" href="/favicon-32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="/favicon-64.png" sizes="64x64">
 
-    <!-- Apple specific tags -->
-    <link rel="apple-touch-icon" href="/favicon-180.png" sizes="180x180">
+    <!-- PNG fallbacks -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <!-- Apple specific -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="mask-icon" href="/favicon.svg" color="#000000">
+
+    <!-- Android -->
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div id="root"></div>
