Updated meta copy

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <!-- Primary Meta Tags -->
     <title>Sumpoints | Tap the Source of Great Satisfaction</title>
     <meta name="title" content="Sumpoints | Tap the Source of Great Satisfaction">
-    <meta name="description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+    <meta name="description" content="Chart your users experience to discover opportunity with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences decisions.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Sumpoints | Tap the Source of Great Satisfaction">
-    <meta property="og:description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+    <meta property="og:description" content="Chart your users experience to discover opportunity with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences decisions.">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Sumpoints | Tap the Source of Great Satisfaction">
-    <meta property="twitter:description" content="Chart customer experiences and discover opportunities with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences user decisions.">
+    <meta property="twitter:description" content="Chart your users experience to discover opportunity with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences decisions.">
 
     <!-- Base favicon - put this first -->
     <link rel="icon" href="/favicon-32.png">
