--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <!-- Apple specific -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
     <link rel="mask-icon" href="/favicon.svg" color="#000000">
 
     <!-- Android -->
