Code for 48px png favicon

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
     <!-- Android -->
     <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Add this line for Google -->
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png">
   </head>
   <body>
     <div id="root"></div>
