White background for safari header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <meta property="twitter:title" content="Sumpoints | Tap the Source of Great Satisfaction">
     <meta property="twitter:description" content="Chart your users experience to discover opportunity with Sumpoints: A visual tool for mapping emotional journeys and understanding what influences decisions.">
 
+    <!-- White header -->
+    <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <!-- Base favicon - put this first -->
     <link rel="icon" href="/favicon-32.png">
 
