--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- White header -->
     <meta name="theme-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="light-content">
 
     <!-- Base favicon - put this first -->
     <link rel="icon" href="/favicon-32.png">
